Updated TaskManager WebApp to save in a pickle rather than a txt file

--- a/flask/templates/todos.html
+++ b/flask/templates/todos.html
@@ -2,7 +2,7 @@
     <html>
     <head>
         <meta charset="UTF-8">
-        <title>Task Manager &lt;&excl;-- omit in toc --&gt;</title>
+        <title>Task Manager </title>
         <style>
 </style>
         
@@ -51,7 +51,6 @@
         {% endfor %}
     {% endif %}
 {% endwith %}
-
 
 
 {% for dict_item in todos %}
